# gpu-burn

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/gpuburn/: config.h  console.h  device_context.h  errors.h  nvml_monitor.h  platform.h  stress_mode.h
include/gpuburn/kernels/: compute_kernels.h  gemm_kernels.h  memory_kernels.h
include/gpuburn/modes/: stress_compute.h  stress_gemm.h  stress_memory.h
src/: console.cpp  device_context.cpp  main.cpp  nvml_monitor.cpp  platform.cpp  stress_mode.cpp
src/kernels/: compute_kernels.cu  gemm_kernels.cu  memory_kernels.cu
src/modes/: stress_compute.cpp  stress_gemm.cpp  stress_memory.cpp
